--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ biopython = "*"
 "urllib3" = ">=1.23"
 notebook = ">=5.7.2"
 isodate = "*"
+nbmerge = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.7"
